--- a/packages/featurebook-html/lib/META-INF/html/feature.pug
+++ b/packages/featurebook-html/lib/META-INF/html/feature.pug
@@ -28,32 +28,33 @@ html
 
         div.featurebook-feature-description.featurebook-markdown !{feature.description}
 
-        each children in feature.childrens
-          if children.type == "Background"
-            div.featurebook-background
-              div.featurebook-background-name #{children.keyword}: #{children.name}
-              each step in children.steps
-                +printStep(step)
+        if feature.children
+          each children in feature.children
+            if children.type == "Background"
+              div.featurebook-background
+                div.featurebook-background-name #{children.keyword}: #{children.name}
+                each step in children.steps
+                  +printStep(step)
 
-          if children.type == "Scenario" || children.type == "ScenarioOutline"
-            div.featurebook-scenario-definition
-              if children.tags
-                each tag in children.tags
-                  div.featurebook-tag= tag.name
-              div.featurebook-scenario-definition-name= children.keyword + ': ' + children.name
-              div !{children.description}
-              each step in children.steps
-                +printStep(step)
-  
-              if children.examples
-                each example in children.examples
-                  div.featurebook-examples
-                    div.featurebook-examples-name= example.keyword + ': ' + example.name
-                    table.featurebook-data-table
-                      tr
-                        each cell in example.tableHeader.cells
-                          th= cell.value
-                      each row in example.tableBody
+            if children.type == "Scenario" || children.type == "ScenarioOutline"
+              div.featurebook-scenario-definition
+                if children.tags
+                  each tag in children.tags
+                    div.featurebook-tag= tag.name
+                div.featurebook-scenario-definition-name= children.keyword + ': ' + children.name
+                div !{children.description}
+                each step in children.steps
+                  +printStep(step)
+
+                if children.examples
+                  each example in children.examples
+                    div.featurebook-examples
+                      div.featurebook-examples-name= example.keyword + ': ' + example.name
+                      table.featurebook-data-table
                         tr
-                          each cell in row.cells
-                            td= cell.value
+                          each cell in example.tableHeader.cells
+                            th= cell.value
+                        each row in example.tableBody
+                          tr
+                            each cell in row.cells
+                              td= cell.value
