--- a/packages/featurebook-html/resources/_metadata.pug
+++ b/packages/featurebook-html/resources/_metadata.pug
@@ -1,4 +1,7 @@
 div.featurebook-metadata
+  div.featurebook-logo
+    a(href= pathPrefix + 'index.html')
+      img(src= pathPrefix + 'assets/logo.png')
   div.featurebook-title
     a(href= pathPrefix + 'index.html') #{metadata.title} #{metadata.version}
 
