--- a/packages/featurebook-serve/public/styles/featurebook.css
+++ b/packages/featurebook-serve/public/styles/featurebook.css
@@ -1,19 +1,23 @@
 @charset "UTF-8";
 
 *, *:before, *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background: #23232E;
-    font-family: Arial Narrow, Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    color: #7BA1AD;
-    margin: 20px;
+  background: #23232E;
+  font-family: Arial Narrow, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: #7BA1AD;
+  margin: 20px;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
+}
+
+img {
+  max-width: 100%;
 }
 
 .table-responsive {
@@ -25,74 +29,72 @@ table {
 }
 
 .featurebook {
-    margin: 0 auto;
-    margin-left: 40px;
-    margin-right: 40px;
+  margin: 0 40px;
 }
 
 .featurebook-metadata {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .featurebook-title {
-    font-size: xx-large;
-    font-weight: bolder;
-    color: #ffffff;
+  font-size: xx-large;
+  font-weight: bolder;
+  color: #ffffff;
 }
 
 .featurebook-title a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .featurebook-authors a {
-    color: #CC7832;
+  color: #CC7832;
 }
 
 .featurebook-contributors a {
-    color: #BBB529;
+  color: #BBB529;
 }
 
 .featurebook-features-tree {
-    float: left;
-    width: 25%;
-    background: #373743;
-    overflow-x: auto;
+  float: left;
+  width: 25%;
+  background: #373743;
+  overflow-x: auto;
 }
 
 .active {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .featurebook-error-message {
-    color: #BC3F3C;
+  color: #BC3F3C;
 }
 
 .featurebook-node-file {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .featurebook-node-directory {
-    color: #7BA1AD;
-    text-decoration: none;
+  color: #7BA1AD;
+  text-decoration: none;
 }
 
 .featurebook-features-tree a:hover {
-    color: #CC7832;
+  color: #CC7832;
 }
 
 .featurebook-features-tree ul {
-    padding-left: 2em;
+  padding-left: 2em;
 }
 
 .featurebook-container {
-    float: left;
-    width: 73%;
-    margin-left: 2%;
-    margin-bottom: 2%;
-    background: #373743;
-    padding: 20px;
+  float: left;
+  width: 73%;
+  margin-left: 2%;
+  margin-bottom: 2%;
+  background: #373743;
+  padding: 20px;
 }
 
 .featurebook-feature {
@@ -100,39 +102,39 @@ table {
 }
 
 .featurebook-feature-description {
-    text-align: justify;
+  text-align: justify;
 }
 
 .featurebook-feature-description p {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .featurebook-feature-description img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .featurebook-feature-name {
-    font-size: x-large;
-    color: #ffffff;
+  font-size: x-large;
+  color: #ffffff;
 }
 
 .featurebook-background-name {
-    font-size: large;
-    margin-bottom: 0.5em;
-    color: #ffffff;
+  font-size: large;
+  margin-bottom: 0.5em;
+  color: #ffffff;
 }
 
 .featurebook-scenario-name {
-    font-size: large;
-    margin-bottom: 0.5em;
-    color: #ffffff;
+  font-size: large;
+  margin-bottom: 0.5em;
+  color: #ffffff;
 }
 
 .featurebook-examples-name {
-    font-size: large;
-    margin-bottom: 0.5em;
-    color: #ffffff;
+  font-size: large;
+  margin-bottom: 0.5em;
+  color: #ffffff;
 }
 
 .featurebook-scenario-description {
@@ -140,120 +142,120 @@ table {
 }
 
 .featurebook-background, .featurebook-scenario, .featurebook-scenario-outline {
-    margin-top: 20px;
-    margin-left: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .featurebook-examples {
-    overflow-x: auto;
-    padding-bottom: 0.5em;
-    margin-top: 0.5em;
+  overflow-x: auto;
+  padding-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 .featurebook-examples tr, .featurebook-step tr {
-    border-left: 2px dotted #CC7832;
+  border-left: 2px dotted #CC7832;
 }
 
 .featurebook-examples td, .featurebook-step td {
-    border-right: 2px dotted #CC7832;
-    padding-left: 1em;
-    padding-right: 1em;
+  border-right: 2px dotted #CC7832;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .featurebook-examples th, .featurebook-step th {
-    border-right: 2px dotted #CC7832;
-    font-weight: normal;
-    color: #9876AA;
-    padding-left: 1em;
-    padding-right: 1em;
+  border-right: 2px dotted #CC7832;
+  font-weight: normal;
+  color: #9876AA;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .featurebook-doc-string {
-    color: #6A8759;
+  color: #6A8759;
 }
 
 .featurebook-step {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 .featurebook-step pre {
-    overflow-x: auto;
-    padding-bottom: 0.5em;
+  overflow-x: auto;
+  padding-bottom: 0.5em;
 }
 
 .featurebook-keyword {
-    color: #CC7832;
-    font-weight: normal;
-    display: inline-block;
-    text-align: right;
-    margin-right: 0;
-    width: 5em;
-    vertical-align: top;
+  color: #CC7832;
+  font-weight: normal;
+  display: inline-block;
+  text-align: right;
+  margin-right: 0;
+  width: 5em;
+  vertical-align: top;
 }
 
 .featurebook-tag {
-    display: inline-block;
-    margin-right: 0.5em;
-    color: #BBB529;
+  display: inline-block;
+  margin-right: 0.5em;
+  color: #BBB529;
 }
 
 .featurebook-step-name {
-    display: inline-block;
-    width: 84%;
-    padding-left: 0.5em;
+  display: inline-block;
+  width: 84%;
+  padding-left: 0.5em;
 }
 
 .featurebook-var {
-    color: #9876AA;
-    font-weight: normal;
+  color: #9876AA;
+  font-weight: normal;
 }
 
 .featurebook-markdown {
-    text-align: justify;
+  text-align: justify;
 }
 
 .featurebook-markdown h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-    margin-top: 0em;
-    margin-bottom: 0.5em;
+  font-weight: normal;
+  margin-top: 0em;
+  margin-bottom: 0.5em;
 }
 
 .featurebook-markdown h1 {
-    font-size: x-large;
+  font-size: x-large;
 }
 
 .featurebook-markdown h2 {
-    font-size: larger;
+  font-size: larger;
 }
 
 .featurebook-markdown h3 {
-    font-size: large;
+  font-size: large;
 }
 
 .featurebook-markdown h4, h5, h6 {
-    font-size: inherit;
+  font-size: inherit;
 }
 
 .featurebook-markdown a {
-    color: white;
+  color: white;
 }
 
 .featurebook-cursor-pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .featurebook-pull-right {
-    float: right;
+  float: right;
 }
 
 .featurebook-indent-1x {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .featurebook-indent-2x {
-    padding-left: 40px;
+  padding-left: 40px;
 }
 
 h1, h2, h3 {
-    color: #FFFFFF;
+  color: #FFFFFF;
 }
