--- a/packages/featurebook-serve/public/views/gherkin-data-table.html
+++ b/packages/featurebook-serve/public/views/gherkin-data-table.html
@@ -1,10 +1,10 @@
 <div class="table-responsive">
     <table class="data-table">
         <tr>
-            <th ng-repeat="cell in tableHeader.cells track by $index">{{cell.value}}</th>
+            <th ng-repeat="cell in table.rows[0].cells track by $index">{{cell.value}}</th>
         </tr>
-        <tr ng-repeat="row in tableBody">
-            <td ng-repeat="cell in row.cells track by $index" ng-bind-html="cell.value | highlightGherkinVariables"></td>
+        <tr ng-repeat="row in table.rows track by $index" ng-if="$index != 0">
+            <td ng-repeat="cell in row.cells" ng-bind-html="cell.value | highlightGherkinVariables"></td>
         </tr>
     </table>
 </div>
